--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,21 @@ body {
 	border: 0px;
 }
 
+.split{
+	/*column split for text only page*/
+
+	-webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count: 2; /* Firefox */
+    column-count: 2;
+
+    -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
+    -moz-column-gap: 40px; /* Firefox */
+    column-gap: 40px;
+
+    -webkit-column-rule: 4px; /* Chrome, Safari, Opera */
+    -moz-column-rule: 4px;  /* Firefox */
+    column-rule: 4px 
+}
 
 
 
