--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
     padding-top: 70px;
     padding-bottom: 40px;
     background-color: gray;
+    overflow: hidden
 }
 .block{
     padding: 20px 0px;   
