--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
     padding-top: 70px;
     padding-bottom: 40px;
     background-color: gray;
-    overflow: hidden
+
 }
 .block{
     padding: 20px 0px;   
@@ -39,6 +39,7 @@ body {
     font-size: 4em;
 }
 .bx-wrapper .bx-viewport {
+	overflow: hidden;
 	border: 0px;
 }
 
