added a few more px to the last page and added a back to the top link

--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,9 @@ img{border:10px;}
 .footer{
   color: white;
   background-color:gray;    
-
+}
+a, a:hover, a:active{
+  color: white !important;
 }
 /* ----------- iPhone 4 and 4S ----------- */
 
